--- a/styles.css
+++ b/styles.css
@@ -1,16 +1,148 @@
 body {
-    background-color: #f9f4ea;
-    color: #605f4b;
+  background-color: #7f9f7a;
+  font-family: "Manrope", sans-serif;
 }
-.nav-bar {
-    color: #605f4b;
+header {
+  color: #f5c6b5;
+  margin-bottom: 2rem;
 }
 
+header h1 {
+  -webkit-text-stroke: 1px black;
+}
+
+/* DOWNLOAD AND LOAD BUTTONS */
+nav button {
+  margin: 1rem 1rem;
+}
+
+.btn-primary {
+  cursor: pointer;
+  background-color: #f5c6b5;
+  color: #253822;
+  border-style: solid;
+  border-color: black;
+  padding: 0.7rem;
+  font-weight: 600;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.btn-primary:hover,
+.inputLabelDiv:hover {
+  background-color: #eee1d1;
+  color: #253822;
+}
+
+.inputLabelDiv {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  box-sizing: border-box;
+  border-width: 1px;
+  border-style: solid;
+  height: 4rem;
+  width: 30rem;
+  border-radius: 1rem;
+  margin: auto;
+  background-color: #f5c6b5;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.inputLabel {
+  font-weight: 500;
+}
+
+#file {
+  cursor: pointer;
+}
+
+/* ADD BOOKS FORM */
 .addBooks {
-    padding: 2em;
-    border-style: solid;
-    border-width: 1px;
-    border-color: #605f4b;
-    border-radius: 2em;
+  padding: 2rem;
+  background-color: #547d56;
+  color: #f5c6b5;
+  border-style: solid;
+  border-width: 1px;
+  border-color: #253822;
+  border-radius: 1.5rem;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+  margin-bottom: 2rem;
+  min-height: auto;
+  max-height: max-content;
+}
 
+h2 {
+  border-style: none none solid none;
+  border-width: 0.2rem;
+  border-color: #f5c6b5;
+  margin-bottom: 1.2rem;
+}
+
+.form-group label,
+.pName {
+  font-size: 1.2rem;
+  font-weight: 500;
+}
+
+.pName {
+  border-style: solid none none none;
+  border-width: 0.1rem;
+  border-color: #f5c6b5;
+  padding: 0;
+}
+
+.btn-success {
+  cursor: pointer;
+  margin-top: 1rem;
+  margin-left: 40%;
+  background-color: #c1cb5b;
+  color: #253822;
+  border-style: solid;
+  border-color: black;
+  padding: 0.7rem 2rem;
+  font-weight: 600;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.btn-success:hover {
+  background-color: #dcee19;
+  color: #253822;
+}
+
+.table {
+  border-color: black;
+  border-style: solid;
+  border-width: 1px;
+  border-radius: 40%;
+  box-shadow: rgba(0, 0, 0, 0.16) 0px 3px 6px, rgba(0, 0, 0, 0.23) 0px 3px 6px;
+}
+
+.btn-danger {
+  cursor: pointer;
+  background-color: #c65546df;
+  color: #253822;
+  border-style: solid;
+  border-color: black;
+}
+
+.btn-danger:hover {
+  background-color: #d89289df;
+  color: #253822;
+  border-style: solid;
+  border-color: black;
+}
+
+.btn-info {
+  cursor: pointer;
+  background-color: #73d5d8df;
+  color: #253822;
+  border-style: solid;
+  border-color: black;
+}
+
+.btn-info:hover {
+  background-color: #b3fcfedf;
+  color: #253822;
+  border-style: solid;
+  border-color: black;
 }
